--- a/src/pages/building-website-101.mdx
+++ b/src/pages/building-website-101.mdx
@@ -42,7 +42,9 @@ export default hello;
 
 ```html
 <body>
-  <h1 class="my-name-is-slim-shady">Hello there! General Kenobi</h1>
+  <h1 class="my-name-is-slim-shady">
+    Hello there! General Kenobi
+  </h1>
 </body>
 ```
 
