--- a/src/pages/building-website-101.mdx
+++ b/src/pages/building-website-101.mdx
@@ -1,4 +1,13 @@
-![alt text][cover-alt]
+---
+title: Building Website 101
+description: A complete guidelines on what to choose when building website and how to do it properly using React with invoker-gatsby (Gastby), invoker-next (Next.js), and invoker-crapp (create-react-app).
+path: /building-website-101
+date: 2019-07-14
+---
+
+import Button from './../components/Button/Button.js'
+
+<!-- ![alt text][cover-alt] -->
 <!-- [![alt text][mission]](http://meridian.id) -->
 
 <!-- 1. [Overview](#overview)
@@ -17,40 +26,11 @@
 5. [Deep Comparison](#deep-comparison)
 6. [Deployment](#deployment) -->
 
-## Overview
-
-```scss
-
-.hello {
-  background-color: red;
-  color: coral;
-}
-```
-
-```jsx
-import React from 'react'
-let dushi = "hello";
-
-const hello = () => {
-  return (
-    <Hello/>
-  )
-};
-
-export default hello;
-```
-
-```html
-<body>
-  <h1 class="my-name-is-slim-shady">
-    Hello there! General Kenobi
-  </h1>
-</body>
-```
+# Building Website 101
 
 > This is a guidelines on deciding what kind of web to build for our client needs. It's also served as guidelines on where the company is heading in terms of web technology, so the team knows what they need to learn and improve.
 
-At [Meridian.id](http://meridian.id), we love React.js. And if the client doesn't have any specific needs for their stack or it's all up to us, we will try to build anything with React.js for the front-end of the site and using a more various stack for the backend.
+At [Meridian.id](http://meridian.id), we love React.js. If the client doesn't have any specific needs for their stack or it's all up to us, we will try to build anything with React.js for the front-end of the site and using a more various stack for the backend.
 
 The main reason we choose React.js for our stack are:
 
