add many hooks, update docs, and rename some dirs

--- a/src/pages/use-is-mounted.mdx
+++ b/src/pages/use-is-mounted.mdx
@@ -10,3 +10,11 @@ date: 2019-07-27
 Check if a component is still mounted or not. This is probably an anti-pattern but can be useful when trying to use promises inside a hook to not risk setting state on an unmounted component.
 
 > Using promises is not ideal with hooks.
+
+## Parameters
+
+## Returns
+
+| Returns   | Type          | Description                                                          |
+| :-------- | :------------ | :------------------------------------------------------------------- |
+| isMounted | fn() => Boolean | A function that when called returns if the component is mounted or not |
