--- a/src/pages/use-is-online.mdx
+++ b/src/pages/use-is-online.mdx
@@ -5,18 +5,14 @@ path: /use-is-online
 date: 2019-07-27
 ---
 
+import { useIsOnline } from './../hooks/index.js'
+
 # useIsOnline
 
 Check if the client is online or offline and update the value if the state changes. This hook is a function dan returning a boolean value.
 
-🔌 Disconnect your internet to see the action
+🔌 Disconnect your internet to see the action!
 
-```jsx live=true
-import { useIsOnline } from './../hooks/index.js'
-
-render (
-  <div>
-    {useIsOnline() ?  <p style={{color: 'green'}}>Online</p>: <p style={{color: 'red'}}>Offline</p>}
-  </div>
-)
-```
+<div>
+  {useIsOnline() ?  <strong style={{color: 'teal'}}>Online</strong>: <strong style={{color: '#ff5a5b'}}>Offline</strong>}
+</div>
